<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bg_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/space_27">

    <LinearLayout
        android:id="@+id/bg_noclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialogradis"
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_19"
        android:paddingLeft="@dimen/space_27"
        android:paddingRight="@dimen/space_27"
        android:paddingTop="@dimen/space_11">

        <LinearLayout
            android:id="@+id/noclick1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/space_15"
            android:paddingRight="@dimen/space_15">

            <com.daniribalbert.customfontlib.views.CustomFontTextView
                android:id="@+id/textView_titles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="@dimen/space_250"
                android:paddingBottom="@dimen/space_16"
                android:text="@string/txt_dialog_title"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="@dimen/font_66"
                app:font="Roboto_Bold" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_close" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e6e6e6" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space_23"
            android:layout_marginTop="@dimen/space_23"
            android:orientation="vertical"
            android:weightSum="2">

            <com.daniribalbert.customfontlib.views.CustomFontEditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:background="@drawable/bg_input_type"
                android:gravity="center"
                android:hint="@string/txt_dialog_content"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:maxLength="9"
                android:paddingBottom="@dimen/space_012"
                android:paddingLeft="@dimen/space_09"
                android:paddingRight="@dimen/space_09"
                android:paddingTop="@dimen/space_012"
                android:textSize="@dimen/font_48"
                app:font="Roboto_Light" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e6e6e6" />


        <!--- -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.daniribalbert.customfontlib.views.CustomFontButton
                android:id="@+id/btn_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_10"
                android:layout_marginTop="@dimen/space_012"
                android:layout_weight="1"
                android:background="@drawable/bg_search"
                android:text="@string/txt_dialog_accept"
                android:textColor="@color/white"
                android:textSize="@dimen/font_56"
                app:font="Roboto_Bold" />

            <com.daniribalbert.customfontlib.views.CustomFontButton
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_012"
                android:layout_weight="1"
                android:background="@drawable/bg_buttonred"
                android:text="@string/txt_dialog_cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/font_56"
                app:font="Roboto_Bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>