<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_15"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_index_blue"
            android:layout_weight="2.7">

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/space_19"
                android:background="@drawable/bg_index"
                android:layout_weight="0.3"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/view_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/space_09"
                    android:layout_weight="1"
                    android:background="@drawable/bg_no"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:id="@+id/txt_vew_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_66"
                        app:font="Roboto_Medium" />

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_48"
                        android:textColor="@color/white"
                        android:text="@string/txt_view_time"
                        app:font="Roboto_Medium" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/temperature"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/space_09"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                   android:background="@drawable/bg_orange"
                   android:orientation="vertical" >

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:id="@+id/txt_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_66"
                        app:font="Roboto_Medium" />

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_48"
                        android:text="@string/txt_temper"
                        android:textColor="@color/white"
                        app:font="Roboto_Medium" />

               </LinearLayout>

                <LinearLayout
                    android:id="@+id/setting_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/space_09"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                    android:background="@drawable/bg_green1"
                    android:orientation="vertical">

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:id="@+id/txt_setting_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_66"
                        app:font="Roboto_Medium" />

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_48"
                        android:text="@string/txt_setting_time"
                        android:textColor="@color/white"
                        app:font="Roboto_Medium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/counter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/space_09"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                    android:background="@drawable/bg_green"
                    android:orientation="vertical">

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:id="@+id/txt_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_66"
                        app:font="Roboto_Medium" />

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_48"
                        android:textColor="@color/white"
                        android:text="@string/txt_counter"
                        app:font="Roboto_Medium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/space_09"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                    android:background="@drawable/bg_yellow"
                    android:orientation="vertical">

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:id="@+id/txt_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_66"
                        app:font="Roboto_Medium" />

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_48"
                        android:textColor="@color/white"
                        android:text="@string/txt_Button"
                        app:font="Roboto_Medium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/output"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="@dimen/space_09"
                    android:layout_weight="1"
                   android:background="@drawable/bg_blue"
                    android:orientation="vertical">

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:id="@+id/txt_output"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_66"
                        app:font="Roboto_Medium" />

                    <com.daniribalbert.customfontlib.views.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_48"
                        android:textColor="@color/white"
                        android:text="@string/txt_output"
                        app:font="Roboto_Medium" />

               </LinearLayout>

            </LinearLayout>
    </LinearLayout>
</LinearLayout>
