<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bg_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/space_48">

    <LinearLayout
        android:id="@+id/bg_noclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialogradis"
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_60"
        android:paddingLeft="@dimen/space_59"
        android:paddingRight="@dimen/space_59"
        android:paddingTop="@dimen/space_29">

        <LinearLayout
            android:id="@+id/noclick1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/space_60"
            android:paddingRight="@dimen/space_60">

            <com.daniribalbert.customfontlib.views.CustomFontTextView
                android:id="@+id/textView_titles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="@dimen/space_1000"
                android:paddingBottom="@dimen/space_64"
                android:text="@string/txt_dialog_title"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="@dimen/font_66"
                app:font="Roboto_Bold" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/button_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:layout_gravity="top"
                android:src="@drawable/ic_close" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e6e6e6" />

              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                  android:layout_marginBottom="@dimen/space_23"
                  android:layout_marginTop="@dimen/space_23"
                android:background="@drawable/draw_nghiphep_quanly"
                android:orientation="horizontal"
                android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/space_29"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <com.daniribalbert.customfontlib.views.CustomFontEditText
                    android:id="@+id/edt_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1.7"
                    android:background="@drawable/draw_edt_seach"
                    android:hint="Enter machine id"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="9"
                    android:paddingBottom="@dimen/space_33"
                    android:paddingLeft="@dimen/space_60"
                    android:paddingRight="@dimen/space_40"
                    android:paddingTop="@dimen/space_33"
                    android:textSize="@dimen/font_48"
                    app:font="Roboto_Light" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:gravity="end"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/btn_choice1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/space_40"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_backhome" />

            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e6e6e6" />
        <LinearLayout
            android:id="@+id/layout_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space_23"
            android:layout_marginTop="@dimen/space_23"
            android:background="@drawable/draw_nghiphep_quanly"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <com.daniribalbert.customfontlib.views.CustomFontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_33"
                    android:layout_marginTop="@dimen/space_33"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="Scan QR code"
                    android:textSize="@dimen/font_48"
                    app:font="Roboto_Light" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:gravity="end"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/btn_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/space_40"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_hamburger" />

            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e6e6e6" />


        <!--- -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.daniribalbert.customfontlib.views.CustomFontButton
                android:id="@+id/btn_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_marginTop="@dimen/space_012"
                android:layout_weight="1"
                android:background="@drawable/bg_search"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/txt_dialog_accept"
                android:textColor="@color/white"
                android:textSize="@dimen/font_56"
                style="@style/Widget.AppCompat.Button.Colored"
                app:font="Roboto_Bold" />

            <com.daniribalbert.customfontlib.views.CustomFontButton
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_012"
                android:layout_weight="1"
                android:background="@drawable/bg_buttonred"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/txt_dialog_cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/font_56"
                style="@style/Widget.AppCompat.Button.Colored"
                app:font="Roboto_Bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>